<resources>
    <string name="app_name">Project2</string>
    <string name="title_activity_landing_page">landing_page</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="enter_your_username">Enter your username</string>
    <string name="password">Password:</string>
    <string name="username">Username:</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="title_activity_login_page">login_page</string>
    <string name="create_an_account">Create an Account</string>
    <string name="legally_distinct_quiz_card_game">Legally Distinct Quiz-Card Game</string>
    <string name="logged_in_as">"Logged in as : "</string>
    <string name="card_remix_page">card remix page</string>
    <string name="card_set_1">Card Set 1</string>
    <string name="enter_card_set_1">enter card set 1</string>
    <string name="card_set_2">card set 2</string>
    <string name="enter_card_set_2">enter card set 2</string>
    <string name="remix_sets">remix sets</string>
    <string name="remix_cards">remix cards</string>
    <string name="new_card_set">new card set</string>
    <string name="title_activity_game_play_page">game_play_page</string>
    <string name="select_answer">Select Answer</string>
    <string name="enter_the_incorrect_answer_responses">Enter the incorrect answer responses:</string>
    <string name="enter_category">enter category</string>
    <string name="enter_question">enter question</string>
    <string name="create_question_and_responses">Create Question and Responses</string>
    <string name="enter_the_question_to_be_displayed">Enter the question to be displayed:</string>
    <string name="enter_the_correct_answer_response">Enter the correct answer response:</string>
    <string name="enter_correct_answer">enter correct answer</string>
    <string name="enter_incorrect_answer1">enter incorrect answer1</string>
    <string name="enter_incorrect_answer2">enter incorrect answer2</string>
    <string name="enter_incorrect_answer3">enter incorrect answer3</string>
    <string name="enter_the_category_to_be_displayed">enter the category to be displayed:</string>
    <string name="legally_distinct_quiz_game_admin_page">legally_distinct_quiz_game_admin_page</string>
    <string name="clear_leaderboards">clear_leaderboards</string>
    <string name="clearing_the_leaderboard_is_irreversible">clearing_the_leaderboard_is_irreversible</string>
    <string name="remove_non_admin_users">remove_non_admin_users</string>
    <string name="removing_non_admin_users_is_irreversible">removing_non_admin_users_is_irreversible</string>
    <string name="new_admin_username">new_admin_username</string>
    <string name="create_new_admin_user">create_new_admin_user</string>
    <string name="enter_username_to_delete">enter_username_to_delete</string>
    <string name="delete_user">delete_user</string>
    <string name="cannot_delete_default_user_accounts">cannot_delete_default_user_accounts</string>
    <string name="delete_a_set">Delete a set</string>
    <string name="enter_name_of_set_to_delete">enter name of set to delete</string>
    <string name="pick_a_set_to_delete">Pick a set to delete</string>
    <string name="user_sign_up_page">user sign up page</string>
    <string name="enter_username">enter username</string>
    <string name="enter_password">enter password</string>
    <string name="confirm_user">confirm user</string>
    <string name="game_set_1">game set 1</string>
    <string name="_2_null_0">2. null: 0</string>
    <string name="game_set_2">Game Set 2</string>
    <string name="_1_null_0">1. null: 0</string>
    <string name="press_to_begin">Press To Begin</string>
</resources>