<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".remix_set_page">

    <TextView
        android:id="@+id/CardRemixTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/card_remix_page"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/CardSetTitle1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/card_set_1"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CardRemixTitle" />

    <EditText
        android:id="@+id/CardSetEntry1"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:hint="@string/enter_card_set_1"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CardSetTitle1" />

    <TextView
        android:id="@+id/CardSetTitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/card_set_2"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CardSetEntry1" />

    <EditText
        android:id="@+id/CardSetEntry2"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:hint="@string/enter_card_set_2"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CardSetTitle2" />

    <Button
        android:id="@+id/RemixButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remix_sets"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CardSetEntry2" />

</androidx.constraintlayout.widget.ConstraintLayout>