<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".admin_page">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/legally_distinct_quiz_game_admin_page"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/editTextNewAdminUsername"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:hint="@string/new_admin_username"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />

    <EditText
        android:id="@+id/editTextNewAdminPassword"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="new_admin_password"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNewAdminUsername" />

    <Button
        android:id="@+id/buttonCreateNewAdminUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextNewAdminUsername"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/create_new_admin_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNewAdminPassword" />

    <EditText
        android:id="@+id/editTextDeleteUser"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonCreateNewAdminUser"
        android:layout_marginTop="40dp"
        android:hint="@string/enter_username_to_delete"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCreateNewAdminUser" />

    <Button
        android:id="@+id/buttonDeleteUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextDeleteUser"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/delete_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDeleteUser" />

    <TextView
        android:id="@+id/textViewDeleteUserWarning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonDeleteUser"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/cannot_delete_default_user_accounts"
        android:textColor="@android:color/holo_red_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonDeleteUser" />
</androidx.constraintlayout.widget.ConstraintLayout>